# mno

./: pyproject.toml  setup.txt
mno/: __main__.py  find_distance.py  function.py  linesearch.py  main.py  multidimensional.py  my_types.py  stopping_condition.py
tests/: test_find_distance.py  test_function.py  test_linesearch.py  test_multidim.py
