[project]
name = "mno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["numpy", "ruff", "pytest", "matplotlib", "sympy", "PyQt6"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["mno"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mno"]

[project.scripts]
todo-bot = "mno.main:main"
